<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <ImageButton
                android:id="@+id/buttonBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back"
                android:padding="8dp"
                android:src="@drawable/arrow_back" />

            <TextView
                android:id="@+id/textViewRules"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/game_rules"
                android:textSize="30sp"
                 />

            <Space
                android:layout_width="40dp"
                android:layout_height="40dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/paranoia_description_1"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:layout_marginBottom="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reveal_round"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/paranoia_description_2"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:layout_marginBottom="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_some_spice"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:lineSpacingExtra="4dp"
            android:padding="14dp"
            android:text="@string/paranoia_description_3"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/why_paranoia"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/paranoia_description_4"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:layout_marginBottom="24dp"/>

    </LinearLayout>
</ScrollView>