<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/newGameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/newGameMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/what_would_you_like_to_do"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/newGameMessage2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/new_game_will_erase_existing_players_and_history"
        android:textSize="17sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNewGame"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/card_game_button"
        android:text="@string/new_game"
        android:textColor="@color/cardGameButtonTextColour"
        android:textSize="18sp"
         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSamePlayers"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_game_button"
        android:text="@string/same_players"
        android:textColor="@color/cardGameButtonTextColour"
        android:textSize="18sp"
         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_game_button"
        android:text="@string/cancel"
        android:textColor="@color/cardGameButtonTextColour"
        android:textSize="18sp"
        />
</LinearLayout>