<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/playerName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/playerScore"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_0"
        android:textSize="18sp"
        android:translationX="-16dp"/>

    <EditText
        android:id="@+id/scoreAmountInput"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:hint="@string/_0"
        android:inputType="number"
        android:gravity="center"
        android:layout_marginEnd="8dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addScoreButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_game_button"
        android:textColor="@color/cardGameButtonTextColour"
        android:textSize="20sp"
        android:text="@string/_plus"
        android:layout_marginEnd="8dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/subtractScoreButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:background="@drawable/card_game_button"
        android:textColor="@color/cardGameButtonTextColour"
        android:textSize="20sp"
        android:layout_marginEnd="8dp"
        android:text="@string/_minus" />
</LinearLayout>